# json_test

./: .gitignore  2024Health Insurance Benefit.xlsx.java  Huaqin US Employee Handbook.pdf.java  MHTool.sln  Makefile  financial_pub.pem  js.code-workspace  protobuf-study.code-workspace  sign_verify_demo.uvguix  sign_verify_demo.uvoptx  sign_verify_demo.uvprojx  uart_test.c  user-guide.md  员工手册-Acknowledgment 确认书.pdf.java
Blinky/: Blinky.uvguix.101002537  Blinky.uvoptx  Blinky.uvprojx
DEMO/Protubuf/: build.gradle  settings.gradle
DEMO/Services/: build.gradle  settings.gradle
DEMO/serialport/: settings.gradle
DEMO/serialport/app/src/main/cpp/: ALog.h  CMakeLists.txt  SerialPort.c  SerialPort.h  native-lib.cpp  serial_datagram.h  uart_io_api.c
MH2101_SDK/: ╕№╨┬╚╒╓╛.md
MHTool/: MHTool.csproj
MHTool/Connector/: SerialConnector.cs  USBConnector.cs
MHTool/Language/: en-us.xaml  zh-cn.xaml
MHTool/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
MHTool/Setting/: AutoTaskSetting.cs  ChipStageUpdateSetting.cs  ConfigNode.cs  ConfigOption.cs  DeviceStageUpdateSetting.cs  FirmwareSetting.cs  FlashSetting.cs  Multilingual.cs  ProtectionSetting.cs  SelfCheckUnit.cs  Setting.cs
MHTool/UI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowEvent.cs  SNFormatSetting.xaml  SNFormatSetting.xaml.cs
RTE/: .gitignore
RTE/CMSIS/: RTX_Config.h
RTE/Security/: mbedTLS_config.h
api/: create_api_package.sh
api/4G/: Android.mk
api/bartest/: Android.mk  MemIon.h  ae_tuning_type.h  barcode_test.mk  bartest.cpp  bartest.h  cmr_common.h  minicam_api.cpp  sensor_raw_isp2.1.h
api/battery/: Android.mk  bat_get_stat_api.cpp  battery_get_status.h  main.c
api/digest_system_test/: calc_dir_digest_recursively.c
api/gdi/: Android.mk  adf_class.cpp  adf_class.h  gdi.c  lcd_brightness_timeout.cpp  main.c  memory_map.h  simple_draw.cpp  simple_draw.h  win_bitmap.h  zh_gb_font.h
audio/: Android.mk  aud_player.cpp  aud_player.h  player.c
everest-board/: .gitignore  everest_board.uvguix.Russell  everest_board.uvoptx  everest_board.uvprojx  main.c  mhscpu_conf.h  remote_message.proto
host/: crc8_soft.c  crc8_soft.h  datagram_codec.c  datagram_codec.h  rpc-test.c  semantic_api.c  serial_datagram.c  serial_datagram.h  uart_io_api.c
java_intermediate/: .gitignore  RemoteMessageApi.java
mcu/: gen_nanopb_c_files.bat  protobuf_example_main.c
mcu-services-hw/: service_camera_hw.c  service_connectivity_test_hw.c  service_db9_pin_hw.c  service_flashlight_hw.c  service_laser_hw.c  service_led_hw.c  service_psn_inside_eeprom_hw.c  service_save_psn_into_eeprom_hw.c
nanopb_intermediate/: .gitignore  semantic_api.c  semantic_api.h
pb_intermediate/: remote_message.pb.h  semantic_api.generated.h
saip-board/: .gitignore  main.c  saip_board.uvoptx  saip_board.uvprojx  service_flashlight_hw.c  service_led_hw.c  task_serial_datagram_recv.c  task_serial_datagram_recv.h
saip-board-services/: service_camera_hw.c  service_connectivity_test_hw.c  service_factory_test_hw.c  service_flashlight_hw.c  service_get_hw_fw_version.c  service_laser_hw.c  service_led_hw.c  service_save_psn_into_eeprom_hw.c
semantic_api/: semantic_api.c  semantic_api.h
src/: .gitignore  2038json.json  CMakeLists.txt  Makefile  RemoteMessage.java  bin2c_code.py  datagram_codec.c  datagram_codec.h  example-host.cpp  example-mcu.c  example-python.py  financial.pem  financial_pub.pem.inc  firmware.bin.inc  firmware_layout_constant.h  firmware_sign_verify.c  firmware_sign_verify.h  gen_pb_rpc_code.py  gen_signature.hpp  main.c  main.cpp  make_all.sh  meta_info_from_pb.py  misc.py  obj_hash.hpp  pub_pem_into_inc.py  remote_message.options  remote_message.proto  remote_message_pb2.py  rsa_sha_demo.c  sign_firmware.py  sign_verify.c  sign_verify.h  sign_verify.py  sqlite  t-rsa.c  target_main.cpp  time_used.hxx  txt_num.options  txt_num.proto
start-board/: main.c  service_laser_hw.c  service_led_hw.c  start_board.uvoptx  start_board.uvprojx  task_led_blink.c  task_led_blink.h  task_uart_demo.c  task_uart_demo.h  uart_io_API.c  uart_io_api.h  user_key_isr.c  user_key_isr.h
start-board-services/: service_pseudo_connectivity_test_hw.c  service_pseudo_factory_test_hw.c  service_pseudo_flashlight_hw.c  service_pseudo_laser_hw.c  service_pseudo_led_hw.c
(+665 files in other folders)
